# transcription-video

./: app.py  pyproject.toml
